# mxm-foundry

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: check-codes.md  interface_design.md  plan_v0.1.0.md  principle_design.md  publish_to_pypi.md  purpose.md  recording_architecture.md  scope.md
src/mxm/foundry/: __init__.py  cli.py
src/mxm/foundry/canonical/: pyproject.toml
src/mxm/foundry/checks/: models.py  predicates.py  registry.py  runner.py  toml_utils.py
src/mxm/foundry/checks/policies/: check_gate.py  documentation.py  formatting.py  license.py  pyproject.py  pyright.py  testing.py  typing.py
src/mxm/foundry/checks/predicates/: documentation.py  filesystem.py  golden.py  license.py  makefile.py  pyproject.py  pyproject_config.py  pyright_config.py
src/mxm/foundry/config/: default.yaml  environment.yaml  machine.yaml  profile.yaml
src/mxm/foundry/policies/: pyproject.toml
tests/: conftest.py  test_check_cli.py  test_check_predicates.py  test_check_runner.py  test_smoke.py
tests/checks/: expected.py  test_check_codes_doc.py  test_cli.py  test_models.py  test_registry.py  test_runner.py  test_toml_utils.py
tests/checks/predicates/: test_filesystem.py  test_filesystem_predicates.py  test_golden.py  test_license.py  test_makefile.py  test_pyproject.py  test_pyproject_config.py  test_pyproject_predicates.py  test_pyright_config.py
